--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-github-btn": "^1.1.1",
+		"react-robohash": "^1.0.9",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.3.0"
 	},
