--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^1.2.26",
-		"@fortawesome/free-solid-svg-icons": "^5.12.0",
+		"@fortawesome/fontawesome-svg-core": "^1.2.27",
+		"@fortawesome/free-solid-svg-icons": "^5.12.1",
 		"@fortawesome/react-fontawesome": "^0.1.8",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.4.0",
 		"@testing-library/user-event": "^7.2.1",
-		"clsx": "^1.0.4",
+		"clsx": "^1.1.0",
 		"history": "^4.10.1",
 		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
@@ -44,12 +44,12 @@
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.10.0",
-		"eslint-config-wesbos": "0.0.19",
+		"eslint-config-wesbos": "^0.0.19",
 		"eslint-plugin-html": "^6.0.0",
-		"eslint-plugin-import": "^2.20.0",
+		"eslint-plugin-import": "^2.20.1",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.2",
-		"eslint-plugin-react": "^7.18.0",
+		"eslint-plugin-react": "^7.18.3",
 		"eslint-plugin-react-hooks": "^2.3.0",
 		"prettier": "^1.19.1"
 	}
